# clustervms-camera-mgr

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-build.sh
src/: common.rs  main.rs  rest_api.rs
test-scripts/: add_camera.sh  get.sh
