[package]
name = "clustervms-camera-mgr"
version = "0.0.1"
edition = "2021"

[dependencies]
dirs = "4.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version = "1.17", features = ["sync", "fs"]}
log = "0.4"
