[package]
name = "clustervms-camera-mgr"
version = "0.0.4"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
clap = "4.0.23"
clustervms = { git = "https://github.com/ClusterVMS/clustervms-rs" }
log = "0.4"
rand = "0.8.5"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.24", features = ["sync", "fs"]}
url = "2.3.1"
